# frm_mirror-takin1

./: .cproject  .gitignore  .project  CMakeLists-dynamic.txt  CMakeLists-static-cli.txt  CMakeLists-static-mingw.txt  CMakeLists-static.txt  CMakeLists.txt  FindClipper.cmake  Findtlibs.cmake  INSTALL  LICENSES  Makefile  NOTES  TODO  build.sh  clean.sh  cp_deb.sh  cp_frameworks.sh  cp_mingw_takin.sh  fix_names.sh  monteconvo.project  montereso.project  prebuild.sh  scanviewer.project  setup_externals.sh  setup_makelists.sh  setup_tlibs.sh  takin.desktop  takin.project  takin.workspace  taz  themakefile
attic/helper/: plotgl_cam.cpp
dialogs/: AboutDlg.cpp  AboutDlg.h  AtomsDlg.cpp  AtomsDlg.h  DWDlg.cpp  DWDlg.h  DeadAnglesDlg.cpp  DispDlg.cpp  DispDlg.h  DynPlaneDlg.cpp  DynPlaneDlg.h  EllipseDlg.cpp  EllipseDlg.h  EllipseDlg3D.cpp  EllipseDlg3D.h  FavDlg.cpp  FilePreviewDlg.cpp  FilePreviewDlg.h  FormfactorDlg.cpp  FormfactorDlg.h  GotoDlg.cpp  GotoDlg.h  NetCacheDlg.cpp  NetCacheDlg.h  NeutronDlg.cpp  NeutronDlg.h  PowderDlg.cpp  PowderDlg.h  RealParamDlg.cpp  RealParamDlg.h  RecipParamDlg.cpp  RecipParamDlg.h  SequenceDlg.cpp  SequenceDlg.h  SettingsDlg.cpp  SettingsDlg.h  SpurionDlg.cpp  SpurionDlg.h  SrvDlg.cpp  SrvDlg.h
doc/: .dir  basics.html  convo.html  fit.html  reso-sqw-native.html  reso-sqw-py.html  reso-sqw.html  reso.html  takin.html  takin.qhcp  takin.qhp
examples/sqw_jl/: sqw.jl
examples/sqw_module/: sqwmod.cpp  sqwmod.h
examples/sqw_py/: sqw.py
helper/: crystalsys.cpp  crystalsys.h  formfact.cpp  formfact.h  globals.cpp  globals.h  lattice.cpp  linalg.cpp  plotgl.cpp  plotgl.h  qthelper.cpp  qthelper.h  sghelper.h  spacegroup.cpp  spacegroup.h  spacegroup_clp.cpp  spacegroup_clp.h
libcrystal/libs/spacegroups/: latticehelper.h  sghelper.h  spacegroup.cpp  spacegroup.h  spacegroup_clp.cpp  spacegroup_impl.h
libcrystal/tools/gentab/: gentab.cpp
libcrystal/tools/sglist/: SgListDlg.cpp
libs/: globals.cpp  globals.h  globals_qt.cpp  plotgl.cpp  plotgl.h  qthelper.cpp  qthelper.h  qwthelper.cpp  qwthelper.h  version.h
libs/formfactors/: formfact.cpp  formfact.h  formfact_impl.h
libs/spacegroups/: crystalsys.cpp  crystalsys.h  latticehelper.h  sghelper.h  spacegroup.cpp  spacegroup.h
plot/: plotgl.cpp  plotgl.h
qthelpers/src/: qthelper.cpp  qwthelper.cpp  qwthelper.h
test/: MgV2O4.taz  MgV2O4_hhl.taz  MgV2O4_hk0.taz  MgV2O4_phonons.job  MnSi.taz  MnSi_for_max.taz  MnSi_on_Mira.taz  mira.taz  plotgl_cam.h  tst_cl.cpp  tst_client.cpp  tst_cov.cpp  tst_fc.cpp  tst_font.cpp  tst_gcd.cpp  tst_geo.cpp  tst_hkl.cpp  tst_qr.cpp  tst_quad.cpp  tst_quat.cpp  tst_quat2.cpp  tst_traits.cpp  yig.taz
tools/cli/: cli_main.cpp
tools/convofit/: convofit.cpp  convofit.h  convofit_import.cpp  convofit_import.h  convofit_main.cpp  model.cpp  model.h  scan.cpp  scan.h  scanseries.cpp
tools/gentab/: gentab.cpp  gentab_clp.cpp  gentab_web.cpp
tools/mini_scanmon/: mini_scanmon.cpp
tools/misc/: addscans.cpp  fcc_hhl.cpp  fcc_hk0.cpp  heli.cpp  hopfgen.cpp  mini_scanmon.cpp  plot_disp.gpl  tst_cl.cpp  tst_client.cpp  tst_clipper.cpp  tst_server.cpp
tools/monteconvo/: ConvoDlg.cpp  ConvoDlg.h  ConvoDlg_file.cpp  ConvoDlg_sim.cpp  SqwParamDlg.cpp  SqwParamDlg.h  TASReso.cpp  TASReso.h  mconv_main.cpp  sqw.cpp  sqw.h  sqw_jl.cpp  sqw_jl.h  sqw_proc.h  sqw_proc_impl.h  sqw_py.cpp  sqw_py.h  sqwbase.cpp  sqwbase.h  sqwfactory.cpp  sqwfactory.h  tst_phonon.cpp  xmconv_main.cpp
tools/montereso/: res.cpp  res.h  res_main.cpp
tools/posextract/: posextract.cpp
tools/res/: ResoDlg.cpp  ResoDlg.h  cn.cpp  cn.h  defs.h  eck.cpp  eck.h  ellipse.cpp  ellipse.h  formulas.h  helper.h  mc.h  plot  pop.cpp  pop.h  res_main.cpp  reso_main.cpp  viol.cpp  viol.h
tools/scanpos/: ScanPosDlg.cpp  ScanPosDlg.h  scanpos.cpp  scanpos.h
tools/scanviewer/: main.cpp  scanviewer.cpp  scanviewer.h
tools/sggen/: domains.cpp  sfact.cpp  sggen.cpp
tools/sglist/: SgListDlg.cpp  SgListDlg.h  main.cpp
tools/taz/: bz3d.cpp  bz3d.h  dialogs  nicos.cpp  nicos.h  proj_lattice.cpp  proj_lattice.h  real3d.cpp  real3d.h  real_lattice.cpp  real_lattice.h  recip3d.cpp  recip3d.h  scattering_triangle.cpp  scattering_triangle.h  sics.cpp  sics.h  tas_layout.cpp  tas_layout.h  tasoptions.h  taz.cpp  taz.h  taz_crys.cpp  taz_export.cpp  taz_file.cpp  taz_main.cpp  taz_net.cpp  taz_nonet.cpp  tof_layout.cpp  tof_layout.h
tools/test/: conc.jl  pytst.cpp  tof.cpp  tst_fc.cpp  tst_font.cpp  tst_gcd.cpp  tst_hdf.cpp  tst_jl.cpp  tst_jl.jl  tst_linalg.cpp  tst_newsg.cpp  tst_prefactor.cpp  tst_py.cpp  tst_quat2.cpp  tst_refl.cpp  tst_traits.cpp  tstsqw.py
ui/: about.ui  atoms.ui  connection.ui  disp.ui  dw.ui  dyn_plane.ui  ellipses.ui  formfactors.ui  goto.ui  monteconvo.ui  netcache.ui  neutrons.ui  powder.ui  real_params.ui  recip_params.ui  reso.ui  scanpos.ui  scanviewer.ui  sequences.ui  settings.ui  sglist.ui  spurions.ui  sqwparams.ui  taz.ui
